--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "main": "index.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "polymerfire": "^0.10.3"
+    "polymerfire": "^0.10.3",
+    "paper-elements": "^1.0.7"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
