--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "polymer": "Polymer/polymer#^1.4.0",
     "polymerfire": "^0.10.3",
     "paper-elements": "^1.0.7",
-    "iron-form": "^1.1.4"
+    "iron-form": "^1.1.4",
+    "app-storage": "PolymerElements/app-storage#^0.9.8"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
