--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "polymerfire": "^0.10.3",
     "paper-elements": "^1.0.7",
     "iron-form": "^1.1.4",
-    "app-storage": "PolymerElements/app-storage#^0.9.8"
+    "app-storage": "PolymerElements/app-storage#^0.9.8",
+    "image-mask": "^1.1.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
