--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "paper-elements": "^1.0.7",
     "iron-form": "^1.1.4",
     "app-storage": "PolymerElements/app-storage#^0.9.8",
-    "image-mask": "^1.1.4"
+    "image-mask": "^1.1.4",
+    "iron-pages": "^1.0.8"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
