--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "messenger",
+  "name": "messenger-facilito",
   "version": "1.0.0",
   "description": "Windows clone MSN to chat",
-  "main": "server.js",
+  "main": "main.js",
   "repository": "git@github.com:sebas095/messenger.git",
   "author": "sebastian duque restrepo <sebas_tian_95@hotmail.com>",
   "license": "MIT",
@@ -13,6 +13,9 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "start": "nodemon server"
+    "start": "electron ."
+  },
+  "devDependencies": {
+    "electron-prebuilt": "^1.4.13"
   }
 }
